[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Map_Editor/Map_Editor.gd" type="Script" id=1]
[ext_resource path="res://Resources/Tiles/Isotiles_Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Resources/UI/Tool Icons/Pen.png" type="Texture" id=3]
[ext_resource path="res://Resources/UI/Tool Icons/Bucket.png" type="Texture" id=4]
[ext_resource path="res://Resources/UI/Tool Icons/Layers.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Instances/Map.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/UI/Minimal_UI_Theme.tres" type="Theme" id=7]
[ext_resource path="res://Resources/UI/kenneyUI-blue.tres" type="Theme" id=8]
[ext_resource path="res://Resources/UI/Tool Icons/!Pen.png" type="Texture" id=9]
[ext_resource path="res://Resources/UI/Tool Icons/AllBucket.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Node_position.gd" type="Script" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.6, 0.6, 0.6, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Map_Editor" type="Control"]
anchor_right = 2.012
anchor_bottom = 2.022
margin_right = -7.68005
margin_bottom = -7.92004
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 688, 45 )
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 32 )
cell_y_sort = true
format = 1

[node name="Map" parent="TileMap" instance=ExtResource( 6 )]
visible = false
position = Vector2( -1, 0 )
z_index = -9

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0
mouse_filter = 1
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="M"]
margin_right = 1280.0
margin_bottom = 712.0
mouse_filter = 2
theme = ExtResource( 8 )

[node name="Menu_Items" type="PanelContainer" parent="M/V"]
margin_right = 1280.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme = ExtResource( 8 )

[node name="H" type="HBoxContainer" parent="M/V/Menu_Items"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1278.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="FileButton" type="MenuButton" parent="M/V/Menu_Items/H"]
margin_right = 100.0
margin_bottom = 46.251
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 8 )
text = "File"
script = ExtResource( 11 )
gpname = "Map_Editor"

[node name="EditButton" type="MenuButton" parent="M/V/Menu_Items/H"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 46.251
rect_min_size = Vector2( 100, 0 )
focus_mode = 2
theme = ExtResource( 8 )
text = "Edit"

[node name="HelpButton" type="MenuButton" parent="M/V/Menu_Items/H"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 46.251
rect_min_size = Vector2( 100, 0 )
focus_mode = 2
theme = ExtResource( 8 )
text = "Edit"

[node name="H" type="HBoxContainer" parent="M/V/Menu_Items/H"]
margin_left = 312.0
margin_right = 1276.0
margin_bottom = 46.0
size_flags_horizontal = 3
theme = ExtResource( 8 )

[node name="H" type="HSplitContainer" parent="M/V" groups=["SplitContainers"]]
margin_top = 54.0
margin_right = 1280.0
margin_bottom = 712.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
split_offset = -450
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="PanelContainer" parent="M/V/H"]
margin_right = 184.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )

[node name="Left_Toolbar" type="VSplitContainer" parent="M/V/H/P" groups=["SplitContainers"]]
margin_right = 184.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource( 7 )

[node name="T" type="TabContainer" parent="M/V/H/P/Left_Toolbar"]
margin_right = 184.0
margin_bottom = 323.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
tab_align = 0

[node name="Entities" type="ItemList" parent="M/V/H/P/Left_Toolbar/T"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 44.0
margin_right = -6.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )

[node name="Objects" type="ItemList" parent="M/V/H/P/Left_Toolbar/T"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 44.0
margin_right = -6.0
margin_bottom = -5.0
theme = ExtResource( 7 )

[node name="T2" type="TabContainer" parent="M/V/H/P/Left_Toolbar"]
margin_top = 335.0
margin_right = 184.0
margin_bottom = 658.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="Parameters" type="ItemList" parent="M/V/H/P/Left_Toolbar/T2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 44.0
margin_right = -6.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )

[node name="Workspace_and_Menu" type="HSplitContainer" parent="M/V/H" groups=["SplitContainers"]]
margin_left = 196.0
margin_right = 1280.0
margin_bottom = 658.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
split_offset = -48

[node name="Workspace_Console" type="VSplitContainer" parent="M/V/H/Workspace_and_Menu" groups=["SplitContainers"]]
margin_right = 1014.0
margin_bottom = 658.0
grow_vertical = 0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
split_offset = 450

[node name="Workspace" type="HBoxContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console"]
margin_right = 1014.0
margin_bottom = 450.0
size_flags_horizontal = 3
theme = ExtResource( 8 )

[node name="TilemapContainer" type="ViewportContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace"]
margin_right = 950.0
margin_bottom = 450.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="S" type="ScrollContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace"]
margin_left = 954.0
margin_right = 1014.0
margin_bottom = 450.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 1
theme = ExtResource( 7 )
scroll_horizontal_enabled = false

[node name="Toolbar" type="ItemList" parent="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace/S"]
margin_right = 52.0
margin_bottom = 248.0
rect_min_size = Vector2( 52, 40 )
theme = ExtResource( 8 )
items = [ "", ExtResource( 3 ), false, "", ExtResource( 4 ), false, "", ExtResource( 9 ), false, "", ExtResource( 10 ), false, "", ExtResource( 5 ), false, "", null, false, "", null, false, "", null, false, "", null, false ]
auto_height = true
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 40, 40 )
script = ExtResource( 11 )
gpname = "Map_Editor"

[node name="P" type="PanelContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace"]
visible = false
margin_left = 886.0
margin_right = 940.0
margin_bottom = 464.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 54, 0 )
theme = ExtResource( 8 )

[node name="TabContainer" type="TabContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console"]
margin_top = 462.0
margin_right = 1014.0
margin_bottom = 658.0
theme = ExtResource( 8 )

[node name="Console" type="TextEdit" parent="M/V/H/Workspace_and_Menu/Workspace_Console/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 44.0
margin_right = -6.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 8 )
readonly = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
breakpoint_gutter = true
fold_gutter = true
smooth_scrolling = true
hiding_enabled = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 11 )
gpname = "Map_Editor"

[node name="Notes" type="TextEdit" parent="M/V/H/Workspace_and_Menu/Workspace_Console/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 44.0
margin_right = -6.0
margin_bottom = -5.0
theme = ExtResource( 8 )
smooth_scrolling = true
wrap_enabled = true

[node name="Console_Container" type="PanelContainer" parent="M/V/H/Workspace_and_Menu/Workspace_Console"]
visible = false
margin_top = 462.0
margin_right = 1008.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="PanelContainer" parent="M/V/H/Workspace_and_Menu"]
margin_left = 1026.0
margin_right = 1084.0
margin_bottom = 658.0
theme = ExtResource( 7 )

[node name="Right_Toolbar" type="VSplitContainer" parent="M/V/H/Workspace_and_Menu/Right" groups=["SplitContainers"]]
margin_right = 58.0
margin_bottom = 658.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_constants/autohide = 1

[node name="Blocks" type="MarginContainer" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar"]
margin_right = 58.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="Tile_Scrollbar" type="ScrollContainer" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Blocks"]
margin_right = 58.0
margin_bottom = 296.0
scroll_horizontal_enabled = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
gpname = "Map_Editor"

[node name="Tile_Selector" type="ItemList" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Blocks/Tile_Scrollbar"]
margin_left = 5.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 291.0
focus_mode = 0
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 11
size_flags_vertical = 3
theme = ExtResource( 7 )
auto_height = true
max_columns = 13
same_column_width = true
fixed_column_width = 48
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
gpname = "Map_Editor"

[node name="Upper_Right_Tool" type="ScrollContainer" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar"]
margin_top = 308.0
margin_right = 58.0
margin_bottom = 658.0
rect_min_size = Vector2( 0, 350 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="Lower_Right_Tool" type="ItemList" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Upper_Right_Tool"]
margin_left = 5.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )

[node name="Layer_Selection" type="Panel" parent="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Upper_Right_Tool/Lower_Right_Tool"]
margin_right = 68.0
margin_bottom = 328.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 2, 2 )

[node name="ParallaxLayer" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxLayer"]
anchor_right = 2.0
anchor_bottom = 2.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace/TilemapContainer" to="." method="_on_TilemapContainer_gui_input"]
[connection signal="item_selected" from="M/V/H/Workspace_and_Menu/Workspace_Console/Workspace/S/Toolbar" to="." method="_on_Toolbar_item_selected"]
[connection signal="text_changed" from="M/V/H/Workspace_and_Menu/Workspace_Console/TabContainer/Console" to="." method="_on_Console_text_changed"]
[connection signal="gui_input" from="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Blocks/Tile_Scrollbar" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="item_selected" from="M/V/H/Workspace_and_Menu/Right/Right_Toolbar/Blocks/Tile_Scrollbar/Tile_Selector" to="." method="_on_Tile_Selector_item_selected"]
